--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.4",
     "eslint": "^9.10.0",
     "globals": "^15.9.0",
